# multisnake

./: Cargo.toml  README.md
src/: client.rs  main.rs  server.rs  shared.rs
src/server/: bot.rs
