[package]
name = "multisnake"
version = "0.1.0"
authors = ["Ponas Kovas"]
edition = "2018"

[dependencies]
term_size = { version = "0.3.1", optional = true }
rand = { version = "0.7.0", optional = true }
clap = "2.33.0"
dns-lookup = { version = "1.0.1", optional = true }
lazy_static = { version = "1.4.0", optional = true }
multimap = { version = "0.7.0", optional = true }

[features]
default = ["client", "server", "bots"]

# client side code, launch with --client
client = ["term_size", "crossterm", "dns-lookup", "lazy_static"]
# server side code, launch with --server
server = ["rand", "multimap"]
# Bots module for the server
bots = ["server"]

[dependencies.crossterm]
version = "0.12.1"
default-features = false
features = ["input", "screen"]
optional = true