[package]
name = "multisnake"
version = "0.1.0"
authors = ["Ponas Kovas"]
edition = "2018"

[dependencies]
term_size = "0.3.1"
rand = "0.7.0"
dns-lookup = "1.0.1"
lazy_static = "1.4.0"
structopt = "0.3.5"

[dependencies.crossterm]
version = "0.12.1"
default-features = false
features = ["input", "screen"]
